--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -7,12 +7,12 @@
   "theme_color": "#007bff",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/public/icons/icon-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/public/icons/icon-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
