--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -3,6 +3,6 @@
     { "src": "/service-worker.js", "dest": "/public/service-worker.js" },
     { "src": "/manifest.json", "dest": "/public/manifest.json" },
     { "src": "/icons/(.*)", "dest": "/public/icons/$1" },
-    { "src": "/(.*)", "dest": "/frontend/$1" }
+    { "src": "/(.*)", "dest": "/$1" }
   ]
 }
