--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "routes": [
-    { "src": "/service-worker.js", "dest": "./public/service-worker.js" },
-    { "src": "/manifest.json", "dest": "./public/manifest.json" },
-    { "src": "/icons/(.*)", "dest": "./public/icons/$1" },
+    { "src": "/service-worker.js", "dest": "/public/service-worker.js" },
+    { "src": "/manifest.json", "dest": "/public/manifest.json" },
+    { "src": "/icons/(.*)", "dest": "/public/icons/$1" },
     { "src": "/(.*)", "dest": "/$1" }
   ]
 }
