--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,7 @@
     { "src": "/service-worker.js", "dest": "/public/service-worker.js" },
     { "src": "/manifest.json", "dest": "/public/manifest.json" },
     { "src": "/icons/(.*)", "dest": "/public/icons/$1" },
+    { "src": "/", "dest": "/index.html" },
     { "src": "/(.*)", "dest": "/$1" }
   ]
 }
