--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,8 @@
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
+  "description": "Your web application description",
+  "orientation": "any",
   "icons": [
     {
       "src": "images/icon-192x192.png",
